--- a/css/academi.style.css
+++ b/css/academi.style.css
@@ -120,3 +120,15 @@ form button:hover {
 .print-button:hover {
     background-color: darkred;
 }
+
+.login-button {
+    background-color: #B85042; /* Red background */
+    color: white;         /* White text */
+    border: none;         /* No border */
+    padding: 10px 20px;   /* Padding around the text */
+    border-radius: 5px;   /* Rounded corners */
+    cursor: pointer;      /* Cursor changes to pointer on hover */
+    /* Add any other styles you need */
+}
+
+
