--- a/css/darkmode.style.css
+++ b/css/darkmode.style.css
@@ -119,13 +119,10 @@ canvas {
     height: 100% !important;
 }
 
-.login-button {
-    background-color: #333333; /* Red background */
-    color: white;         /* White text */
-    border: none;         /* No border */
-    padding: 10px 20px;   /* Padding around the text */
-    border-radius: 5px;   /* Rounded corners */
-    cursor: pointer;      /* Cursor changes to pointer on hover */
+.login {
+    position: fixed;
+    top: 7px;
+    left 0px;
     /* Add any other styles you need */
 }
 
