--- a/css/packers.style.css
+++ b/css/packers.style.css
@@ -139,4 +139,11 @@ canvas {
     height: 100% !important;
 }
 
+.login {
+    position: fixed;
+    top: 7px;
+    left 0px;
+    /* Add any other styles you need */
+}
+
 /* You might want to add additional styling specific to your charts here */
