--- a/css/lightmode.style.css
+++ b/css/lightmode.style.css
@@ -119,6 +119,13 @@ canvas {
     height: 100% !important;
 }
 
+.login {
+    position: fixed;
+    top: 7px;
+    left 0px;
+    /* Add any other styles you need */
+}
+
 
 /* You might want to add additional styling specific to your charts here */
 
