--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ form button:hover {
 }
 
 
+
 /* Style for tables */
 .centered-table {
     width: 100%; /* Set the table width */
@@ -139,6 +140,13 @@ form button:hover {
 canvas {
     width: 100% !important;
     height: 100% !important;
+}
+
+.login {
+    position: fixed;
+    top: 7px;
+    left 0px;
+    /* Add any other styles you need */
 }
 
 /* You might want to add additional styling specific to your charts here */
